--- a/CHANGES
+++ b/CHANGES
@@ -23,7 +23,8 @@ the arguments of the probability function.
 - CryptoVerif now checks that calls to the same probability function
 have the same number of arguments and compatible dimensions.
 - Added the "letproba" declaration to define probability functions.
-- Nicer probability formulas: write A - B instead of A + -B.
+- Nicer probability formulas: write A - B instead of A + -B;
+group some time formulas.
 - Added a macro for DDH with random self reducibility in the standard
 library of cryptographic primitives (it is more limited than other DDH
 macros).
@@ -44,6 +45,10 @@ and deserialization functions were swapped for types bool and bitstringbot
 rewritings of the game: it supported only expanded games, but
 was sometimes called on non-expanded games.
 - Fixed probabilities in square GDH and PRF-ODH.
+- Fixed bug in probabilities: when a collision statement was applied
+together with a crypto transformation, there was confusion between
+the time of the adversary against the collision statement and the one
+against the crypto transformation.
 
 Version 2.04
 
