--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,9 @@ conditions of find.
 - Improved test infrastructure: allow setting a timeout on tests.
 - Reimplemented the counting of calls to oracles in the crypto transformation,
 to make it more precise and fix two bugs.
+- Fixed bug in query_equiv: undone the optimization of the translation
+that avoids creating oracles that just generate random values before
+a single oracle; this optimization was not sound in general.
 - Fixed bug in generation of OCaml implementations: a non-existing
 file is now considered as an empty table (reported by Benjamin Lipp).
 - Fixed bug in generation of OCaml implementations: serialization
