updated expected results; fixed typo in manual

--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1304,7 +1304,7 @@ then $\texttt{not}(t)$ indeed holds by the fact above;
 we assume that $y_j[M_{j1}, \ldots, M_{jl_j}]$ is defined after or at the same time as $x[M_1, \ldots, M_l]$
 and try to prove $\texttt{not}(t)$.
 
-It this proof succeeds, we can infer that $\texttt{not}(t)$ holds
+If this proof succeeds, we can infer that $\texttt{not}(t)$ holds
 at the current program point.
 \end{itemize}
 
