--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2895,7 +2895,7 @@ sets parameters, as the \texttt{set} instruction in input files.
 $\nonterm{formulas}$ is 
 a comma-separated list of formulas of the form
 $\nonterm{psize}_1\texttt{\string^}{n_1} \tttimes \dots \tttimes \nonterm{psize}_k\texttt{\string^}{n_k} / \nonterm{pest}$,
-where the exponents $n_i$ can be omitted when equal to 1;
+where the exponents $n_i$ can be omitted when equal to 1, writing $\nonterm{psize}_i$ instead of $\nonterm{psize}_i\texttt{\string^1}$, and the whole factor $\nonterm{psize}_1\texttt{\string^}{n_1} \tttimes \dots \tttimes \nonterm{psize}_k\texttt{\string^}{n_k}$ is replaced with $\texttt{1}$ when there is no $\nonterm{psize}_i$ factor at all;
 $\nonterm{psize}_i$ is an identifier that determines the size of a
 parameter: \texttt{size$n$} for parameters of size $n$, meaning that the parameter is at most $2^n$,
 \texttt{small} for size 2, \texttt{passive} or \texttt{default} for size 30,
@@ -2907,22 +2907,19 @@ such that $1/\nonterm{pest}$ estimates a probability. It can take the following 
 \texttt{large} is equivalent to \texttt{pest160}, i.e. the probability $1/\nonterm{pest}$ is at most $2^{-160}$. (See also the declarations \texttt{param}, \texttt{proba},
 and \texttt{type} for explanations of these estimates.)
 
-Collisions are eliminated when their probability 
-is at most of the form  $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k} \times \texttt{Pcoll1rand}(T)$,
+\newcommand{\proba}{\mathit{proba}_0}
+Collisions are eliminated when, for some formula $\nonterm{psize}_1\texttt{\string^}{n_1} \tttimes \dots \tttimes \nonterm{psize}_k\texttt{\string^}{n_k} / \nonterm{pest}$ in the list $\nonterm{formulas}$, their probability 
+is at most of the form  $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k} \times \proba$,
 where $p_i$ is a parameter of size at most $\nonterm{psize}_i$
-and $\texttt{Pcoll1rand}(T)$ is at most the probability estimated by $1/\nonterm{pest}$.
-By default, collisions are eliminated for $\textit{anything} \times \texttt{Pcoll1rand}(T)$ when $\texttt{Pcoll1rand}(T) \leq 2^{-160}$ (\texttt{large}),
-and for $p \times \texttt{Pcoll1rand}(T)$ when $p \leq 2^2$ (\texttt{small}) and $\texttt{Pcoll1rand}(T) \leq 2^{-20}$ (\texttt{password}).
+and the estimate of the probability $\proba$ is at most $1/\nonterm{pest}$.
+This condition is applied both for collisions between elements of a type $T$, in which case
+$\proba = \texttt{Pcoll1rand}(T)$, and for \texttt{collision} statements, in which case $\proba$ is the
+probability given in the \texttt{collision} statement.
+When the list of formulas $\nonterm{formulas}$ is empty, elimination of collisions is entirely disabled.
 
-Additionally, $\nonterm{formulas}$ may also contain elements of the form
-$ \texttt{collision} \tttimes \nonterm{psize}_1\texttt{\string^}{n_1} \tttimes \dots \tttimes \allowbreak \nonterm{psize}_k\texttt{\string^}{n_k}$.
-These formulas allow the transformation of terms by \texttt{collision} statements, provided 
-the number of times the collision statement is applied is at most 
-$\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k}$
-where $p_i$ is a parameter of size at most $\nonterm{psize}_i$.
-By default, \texttt{collision} statements can always be applied.
-
-The default behavior is inspired by what happens in asymptotic security: \texttt{large} means that the probability of collision is asymptotically negligible, while the parameters are always polynomial, so $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k} \times \texttt{Pcoll1rand}(T)$ is negligible when $T$ is \texttt{large}. Similarly, probabilities given in collision statements are always negligible, while the parameters are always polynomial, so the probability obtained by applying $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k}$ times a collision statement remains negligible.
+By default, collisions are eliminated for $\textit{anything} \times \proba$ when $\proba \leq 2^{-155}$ (where \texttt{large} would mean $2^{-160}$, to allow collisions that have probability a small factor times collisions between elements of a \texttt{large} type),
+and for $p \times \proba$ when $p \leq 2^2$ (\texttt{small}) and $\proba \leq 2^{-20}$ (\texttt{password}).
+The default behavior is inspired by what happens in asymptotic security: \texttt{large} means that the probability of collision is asymptotically negligible, while the parameters are always polynomial, so $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k} \times \texttt{Pcoll1rand}(T)$ is negligible when $T$ is \texttt{large}. Similarly, probabilities given in collision statements are always negligible (probabilities are declared \texttt{large} by default), while the parameters are always polynomial, so the probability obtained by applying $\textit{constant} \times p_1^{n_1} \times \dots \times p_k^{n_k}$ times a collision statement remains negligible.
 
 \item \texttt{allowed\string_collisions} $\nonterm{pest}$, where $\nonterm{pest}$ estimates a probability: \texttt{pest$n$} means that the probability is at most $2^{-n}$;
 \texttt{password} is equivalent to \texttt{pest20}, i.e. probability at most $2^{-20}$;
