--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -3148,7 +3148,8 @@ and $\nonterm{test\_set}$ can be:
 \item \texttt{big} runs bigger CryptoVerif examples
 \item \texttt{proverif} runs ProVerif on tests suitable for it
 \item \texttt{converted} runs CryptoVerif on examples converted from CryptoVerif 1.28
-\item \texttt{all} runs all tests included in \texttt{basic}, \texttt{proverif}, \texttt{converted}, and \texttt{big}
+\item \texttt{impl} runs tests of the generation of OCaml implementations
+\item \texttt{all} runs all tests included in \texttt{basic}, \texttt{proverif}, \texttt{converted}, \texttt{big}, and \texttt{impl}
 \item $\texttt{dir}\ \nonterm{prefix}\ \nonterm{list\_of\_directories}$ analyzes the mentioned directories
 using CryptoVerif, using $\nonterm{prefix}$ as prefix for the output files.
 \end{itemize}
